Count chopped logs further away #195